fix: Ensure adapted fore colors have enough contrast
The ForeColor are use for text, and must be readable to the background.
The previous implementation tried to adapt the fore color as the closest
app text-backround pair. The background was in most situations ignored,
or used to get a generic (black/white) fore color.

The updated algorithm use the actual background color to adopt the
current color to get sufficient contrast.

Cache color conversions, all text editor colors are converted.

adjust the AdaptColor api slightly, as the background and foreground
colors are adapted separetly.

--- a/src/app/GitUI/Themes/dark+.css
+++ b/src/app/GitUI/Themes/dark+.css
@@ -9,6 +9,6 @@
 .AuthoredHighlight { color: #282800; }
 .Selection { color: #2d6981; }
 .HighlightAllOccurences { color: #1a475a; }
-.InactiveSelectionHighlight { color: #1e3d4b; }
+.InactiveSelectionHighlight { color: #171e25; }
 
 .Branch { color: #00d76b; }
